salesforce/force-app/main/default/objects/OrgIQ_Target_Org__c/OrgIQ_Target_Org__c.object-meta.xml
<CustomObject>
    <description>One Salesforce org in the enterprise's estate — a sandbox or production. Scans hang off it, so a backlog belongs to an org rather than to a free-text name, and the same org can be compared with its siblings over time.</description>
    <label>OrgIQ Target Org</label>
    <pluralLabel>OrgIQ Target Orgs</pluralLabel>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>