salesforce/force-app/main/default/objects/OrgIQ_Target_Org__c/fields/Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Enterprise__c</fullName>
    <description>The tenant this org belongs to. Master-detail rather than lookup, so an org cannot exist outside an enterprise and inherits its sharing — the boundary is the platform's, not a convention the query layer remembers to honour.</description>
    <label>Enterprise</label>
    <referenceTo>OrgIQ_Enterprise__c</referenceTo>
    <relationshipLabel>Orgs</relationshipLabel>
    <relationshipName>Orgs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>