salesforce/force-app/main/default/objects/OrgIQ_Target_Org__c/fields/External_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Org_Id__c</fullName>
    <description>Stable identifier for this org, used to upsert it without creating duplicates on every scan.</description>
    <inlineHelpText>Stable identifier for this org, used to upsert it without creating duplicates on every scan.</inlineHelpText>
    <label>External Org Id</label>
    <externalId>true</externalId>
    <length>80</length>
    <required>true</required>
    <unique>true</unique>
    <type>Text</type>
</CustomField>