salesforce/force-app/main/default/objects/OrgIQ_Target_Org__c/fields/Instance_Url__c.field-meta.xml
<CustomField>
    <fullName>Instance_Url__c</fullName>
    <description>My Domain / instance URL for this org, so a finding can be opened where it lives.</description>
    <inlineHelpText>My Domain / instance URL for this org, so a finding can be opened where it lives.</inlineHelpText>
    <label>Instance URL</label>

    <type>Url</type>
</CustomField>