salesforce/force-app/main/default/objects/OrgIQ_Target_Org__c/fields/Is_Production__c.field-meta.xml
<CustomField>
    <fullName>Is_Production__c</fullName>
    <description>True for the org of record. Findings here are live risk rather than pre-release risk.</description>
    <inlineHelpText>True for the org of record. Findings here are live risk rather than pre-release risk.</inlineHelpText>
    <label>Is Production</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>