salesforce/force-app/main/default/objects/OrgIQ_Target_Org__c/fields/Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed__c</fullName>
    <description>When this sandbox was last refreshed from its source org. Drift is only meaningful relative to this date — an org refreshed last week is expected to match, one refreshed a year ago is not.</description>
    <inlineHelpText>When this sandbox was last refreshed from its source org. Drift is only meaningful relative to this date — an org refreshed last week is expected to match, one refreshed a year ago is not.</inlineHelpText>
    <label>Last Refreshed</label>

    <type>Date</type>
</CustomField>