salesforce/force-app/main/default/objects/OrgIQ_Target_Org__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Anything a reader needs in order to interpret this org's scans — an acquisition, a partial copy, a frozen legacy instance.</description>
    <inlineHelpText>Anything a reader needs in order to interpret this org's scans — an acquisition, a partial copy, a frozen legacy instance.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>