salesforce/force-app/main/default/objects/OrgIQ_Target_Org__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <description>Where this org sits in the promotion path. A defect in Production is not the same finding as the same defect in a developer sandbox.</description>
    <inlineHelpText>Where this org sits in the promotion path. A defect in Production is not the same finding as the same defect in a developer sandbox.</inlineHelpText>
    <label>Org Type</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Production</fullName><default>false</default><label>Production</label></value>
            <value><fullName>UAT</fullName><default>false</default><label>UAT</label></value>
            <value><fullName>Staging</fullName><default>false</default><label>Staging</label></value>
            <value><fullName>QA</fullName><default>false</default><label>QA</label></value>
            <value><fullName>Developer</fullName><default>false</default><label>Developer</label></value>
            <value><fullName>Training</fullName><default>false</default><label>Training</label></value>
            <value><fullName>Other</fullName><default>true</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>